data/derived/comb/progs/unify/prog8130.ml.out
Characters 144-158:
  |_ -> [remainder h i] @ (i * h)/10 + mulByDigit i t;;
                                       ^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
